--- a/case-studies.html
+++ b/case-studies.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="ZeroFlowTech Case Studies – Real results from custom websites, CRM, automation & travel solutions in Bhopal and beyond." />
+  <meta name="description"
+    content="ZeroFlowTech Case Studies – Real results from custom websites, CRM, automation & travel solutions in Bhopal and beyond." />
   <title>Case Studies | ZeroFlowTech – Real Results, Real Growth</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,25 +28,90 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    .gradient-hero { background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #dbeafe); }
-    .gradient-text { background: linear-gradient(90deg, #1e40af, #00A3E8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-    .premium-button { transition: all 0.4s ease; box-shadow: 0 6px 20px rgba(37,99,235,0.25); }
-    .premium-button:hover { box-shadow: 0 12px 35px rgba(37,99,235,0.4); transform: translateY(-3px); }
-    .section-fade { opacity: 0; transform: translateY(40px); transition: all 1s ease-out; }
-    .section-fade.visible { opacity: 1; transform: translateY(0); }
-    .case-card { transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1); }
-    .case-card:hover { transform: translateY(-12px); box-shadow: 0 25px 50px -12px rgba(37,99,235,0.35); }
-    .stat-number { opacity: 0; transform: translateY(20px); transition: all 1.2s ease-out; }
-    .stat-visible { opacity: 1 !important; transform: translateY(0) !important; }
-    .quote-bubble { position: relative; }
-    .quote-bubble::before { content: '“'; position: absolute; top: -30px; left: -10px; font-size: 8rem; color: #e0f2fe; opacity: 0.3; line-height: 1; z-index: -1; }
+    .gradient-hero {
+      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #dbeafe);
+    }
+
+    .gradient-text {
+      background: linear-gradient(90deg, #1e40af, #00A3E8);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .premium-button {
+      transition: all 0.4s ease;
+      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.25);
+    }
+
+    .premium-button:hover {
+      box-shadow: 0 12px 35px rgba(37, 99, 235, 0.4);
+      transform: translateY(-3px);
+    }
+
+    .section-fade {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 1s ease-out;
+    }
+
+    .section-fade.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .case-card {
+      transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    .case-card:hover {
+      transform: translateY(-12px);
+      box-shadow: 0 25px 50px -12px rgba(37, 99, 235, 0.35);
+    }
+
+    .stat-number {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 1.2s ease-out;
+    }
+
+    .stat-visible {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+    }
+
+    .quote-bubble {
+      position: relative;
+    }
+
+    .quote-bubble::before {
+      content: '“';
+      position: absolute;
+      top: -30px;
+      left: -10px;
+      font-size: 8rem;
+      color: #e0f2fe;
+      opacity: 0.3;
+      line-height: 1;
+      z-index: -1;
+    }
+
     @media (max-width: 640px) {
-      h1 { font-size: 2.5rem !important; line-height: 1.1; }
-      h2 { font-size: 2rem !important; }
-      .text-xl { font-size: 1.125rem !important; }
+      h1 {
+        font-size: 2.5rem !important;
+        line-height: 1.1;
+      }
+
+      h2 {
+        font-size: 2rem !important;
+      }
+
+      .text-xl {
+        font-size: 1.125rem !important;
+      }
     }
   </style>
 </head>
+
 <body class="bg-white text-slate-900 antialiased">
 
   <!-- Top Banner -->
@@ -64,27 +131,33 @@
           <nav class="flex gap-8 font-medium">
             <a href="index.html" class="hover:text-blue-700">Home</a>
             <a href="services.html" class="hover:text-blue-700">Services</a>
-            <a href="index.html#projects" class="hover:text-blue-700">Projects</a>
             <a href="case-studies.html" class="text-blue-700 font-semibold">Case Studies</a>
             <a href="about.html" class="hover:text-blue-700">About</a>
             <a href="contact.html" class="hover:text-blue-700">Contact</a>
+            <a href="faq.html" class="hover:text-blue-700">FAQ</a>
           </nav>
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
-            Book Free Call
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank"
+            class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
           </a>
         </div>
         <div class="md:hidden flex items-center gap-3">
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Book Call</a>
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank"
+            class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
+          </a>
           <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i></button>
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white border-t py-6 px-6 space-y-5 font-medium">
         <a href="index.html" class="block hover:text-blue-700">Home</a>
         <a href="services.html" class="block hover:text-blue-700">Services</a>
-        <a href="index.html#projects" class="block hover:text-blue-700">Projects</a>
         <a href="case-studies.html" class="block text-blue-700 font-semibold">Case Studies</a>
         <a href="about.html" class="block hover:text-blue-700">About</a>
         <a href="contact.html" class="block hover:text-blue-700">Contact</a>
+        <a href="faq.html" class="clock hover:text-blue-700">FAQ</a>
       </div>
     </div>
   </header>
@@ -108,10 +181,12 @@
       <!-- Case 1: DejaVu Tours -->
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div>
-          <div class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
+          <div
+            class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
             <i class="fa-solid fa-plane-departure"></i> Travel Industry
           </div>
-          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">DejaVu Tours – From Chaos to 24/7 Automation</h2>
+          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">DejaVu Tours – From Chaos to 24/7
+            Automation</h2>
 
           <div class="mb-8">
             <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
@@ -159,27 +234,32 @@
           <p class="text-slate-600 mb-8">Next.js • Node.js • MongoDB • WhatsApp API • Email Automation</p>
 
           <div class="flex flex-col sm:flex-row gap-4">
-            <a href="https://www.dejavutours.in" target="_blank" class="flex-1 bg-blue-700 text-white py-4 rounded-xl font-semibold text-center hover:bg-blue-800 premium-button">
+            <a href="https://www.dejavutours.in" target="_blank"
+              class="flex-1 bg-blue-700 text-white py-4 rounded-xl font-semibold text-center hover:bg-blue-800 premium-button">
               View Live Site <i class="fa-solid fa-external-link-alt ml-2"></i>
             </a>
-            <a href="contact.html" class="flex-1 border-2 border-blue-700 text-blue-700 py-4 rounded-xl font-semibold text-center hover:bg-blue-50">
+            <a href="contact.html"
+              class="flex-1 border-2 border-blue-700 text-blue-700 py-4 rounded-xl font-semibold text-center hover:bg-blue-50">
               Want Similar Results?
             </a>
           </div>
         </div>
 
         <div>
-          <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1200&q=80" alt="Travel Automation" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1200&q=80"
+            alt="Travel Automation" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
         </div>
       </div>
 
       <!-- Case 2: Neelant Group -->
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div class="lg:order-2">
-          <div class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
+          <div
+            class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
             <i class="fa-solid fa-building"></i> Real Estate & Construction
           </div>
-          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Neelant Group – Three Websites, One Strong Brand</h2>
+          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Neelant Group – Three Websites, One
+            Strong Brand</h2>
 
           <div class="mb-8">
             <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
@@ -227,30 +307,36 @@
           <p class="text-slate-600 mb-8">Next.js • Node.js • MySQL • Custom CMS</p>
 
           <div class="flex flex-wrap gap-4">
-            <a href="https://neelantgroup.com" target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            <a href="https://neelantgroup.com" target="_blank"
+              class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
               Group Site
             </a>
-            <a href="https://neelantproperties.com" target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            <a href="https://neelantproperties.com" target="_blank"
+              class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
               Properties
             </a>
-            <a href="https://neelantconstruction.com" target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            <a href="https://neelantconstruction.com" target="_blank"
+              class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
               Construction
             </a>
           </div>
         </div>
 
         <div class="lg:order-1">
-          <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=1200&q=80" alt="Real Estate Success" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=1200&q=80"
+            alt="Real Estate Success" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
         </div>
       </div>
 
       <!-- Case 3: Logistics CRM (Example) -->
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div>
-          <div class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
+          <div
+            class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
             <i class="fa-solid fa-truck"></i> Logistics
           </div>
-          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Swift Logistics – Real-Time Inventory & Order Dashboard</h2>
+          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Swift Logistics – Real-Time
+            Inventory & Order Dashboard</h2>
 
           <div class="mb-8">
             <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
@@ -297,23 +383,28 @@
           <p class="font-semibold mb-2">Tech Stack:</p>
           <p class="text-slate-600 mb-8">React • Node.js • PostgreSQL • Real-time WebSockets</p>
 
-          <a href="contact.html" class="inline-flex items-center justify-center gap-3 bg-blue-700 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-800 premium-button">
+          <a href="contact.html"
+            class="inline-flex items-center justify-center gap-3 bg-blue-700 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-800 premium-button">
             Want This Efficiency? <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
 
         <div>
-          <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Logistics Dashboard" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
+          <img
+            src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80"
+            alt="Logistics Dashboard" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
         </div>
       </div>
 
       <!-- Case 4: E-commerce Store (Example) -->
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div class="lg:order-2">
-          <div class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
+          <div
+            class="inline-flex items-center gap-3 bg-blue-100 text-blue-700 px-5 py-2 rounded-full text-sm font-semibold mb-6">
             <i class="fa-solid fa-cart-shopping"></i> E-commerce
           </div>
-          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Vikram Fashion – From Slow Site to High-Converting Store</h2>
+          <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 gradient-text">Vikram Fashion – From Slow Site to
+            High-Converting Store</h2>
 
           <div class="mb-8">
             <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
@@ -360,13 +451,15 @@
           <p class="font-semibold mb-2">Tech Stack:</p>
           <p class="text-slate-600 mb-8">Next.js • Stripe/Razorpay • MongoDB • Tailwind</p>
 
-          <a href="contact.html" class="inline-flex items-center justify-center gap-3 bg-blue-700 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-800 premium-button">
+          <a href="contact.html"
+            class="inline-flex items-center justify-center gap-3 bg-blue-700 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-800 premium-button">
             Want Higher Sales? <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
 
         <div class="lg:order-1">
-          <img src="https://images.unsplash.com/photo-1556740714-a8395b3a74dd?auto=format&fit=crop&w=1200&q=80" alt="E-commerce Success" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=1200&q=80"
+            alt="E-commerce Success" class="rounded-3xl shadow-2xl w-full" loading="lazy" />
         </div>
       </div>
 
@@ -378,13 +471,13 @@
     <div class="max-w-5xl mx-auto px-4 text-center">
       <h2 class="text-4xl sm:text-5xl font-bold mb-8">Your Success Story Starts Here</h2>
       <p class="text-xl sm:text-2xl mb-10 max-w-3xl mx-auto">
-        We’ve transformed travel agencies, real estate groups, logistics firms & e-commerce stores — let’s do the same for you.
+        We’ve transformed travel agencies, real estate groups, logistics firms & e-commerce stores — let’s do the same
+        for you.
       </p>
       <div class="flex flex-col sm:flex-row justify-center gap-6">
-        <a href="https://calendly.com/zeroflowtech/15min" target="_blank" class="bg-white text-blue-700 px-10 py-6 rounded-xl font-bold text-xl hover:bg-gray-100 premium-button inline-flex items-center gap-3">
-          Book Free Strategy Call <i class="fa-solid fa-arrow-right"></i>
-        </a>
-        <a href="https://wa.me/916268497800?text=Hi%20ZeroFlowTech%2C%20show%20me%20case%20studies%20for%20my%20business" target="_blank" class="bg-green-500 text-white px-10 py-6 rounded-xl font-bold text-xl hover:bg-green-600 inline-flex items-center gap-3">
+        <a href="https://wa.me/916268497800?text=Hi%20ZeroFlowTech%2C%20show%20me%20case%20studies%20for%20my%20business"
+          target="_blank"
+          class="bg-green-500 text-white px-10 py-6 rounded-xl font-bold text-xl hover:bg-green-600 inline-flex items-center gap-3">
           Chat on WhatsApp <i class="fa-brands fa-whatsapp text-2xl"></i>
         </a>
       </div>
@@ -405,7 +498,8 @@
           <a href="mailto:zeroflowtech@gmail.com" class="hover:text-white">zeroflowtech@gmail.com</a>
         </div>
       </div>
-      <p class="mt-8 text-sm">© 2026 ZeroFlowTech – Building trust, one solution at a time. Ongoing support included.</p>
+      <p class="mt-8 text-sm">© 2026 ZeroFlowTech – Building trust, one solution at a time. Ongoing support included.
+      </p>
     </div>
   </footer>
 
@@ -449,4 +543,5 @@
     stats.forEach(stat => statObserver.observe(stat));
   </script>
 </body>
+
 </html>
