--- a/contact.html
+++ b/contact.html
@@ -125,30 +125,34 @@
         <div class="hidden md:flex items-center gap-10">
           <nav class="flex gap-8 font-medium">
             <a href="index.html" class="hover:text-blue-700">Home</a>
-            <a href="index.html#services" class="hover:text-blue-700">Services</a>
-            <a href="index.html#projects" class="hover:text-blue-700">Projects</a>
+            <a href="services.html" class="hover:text-blue-700">Services</a>
             <a href="case-studies.html" class="hover:text-blue-700">Case Studies</a>
             <a href="about.html" class="hover:text-blue-700">About</a>
             <a href="contact.html" class="text-blue-700 font-semibold">Contact</a>
+            <a href="faq.html" class="hover:text-blue-700">Faq</a>
           </nav>
-          <a href="https://calendly.com/zeroflowtech/15min"
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank"
             class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
-            Book Free Call
+            Query ?
           </a>
         </div>
         <div class="md:hidden flex items-center gap-3">
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Book
-            Call</a>
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank"
+            class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
+          </a>
           <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i></button>
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white border-t py-6 px-6 space-y-5 font-medium">
         <a href="index.html" class="block hover:text-blue-700">Home</a>
-        <a href="index.html#services" class="block hover:text-blue-700">Services</a>
-        <a href="index.html#projects" class="block hover:text-blue-700">Projects</a>
+        <a href="services.html" class="block hover:text-blue-700">Services</a>
         <a href="case-studies.html" class="block hover:text-blue-700">Case Studies</a>
         <a href="about.html" class="block hover:text-blue-700">About</a>
         <a href="contact.html" class="block text-blue-700 font-semibold">Contact</a>
+        <a href="faq.html" class="block hover:text-blue-700">Faq</a>
       </div>
     </div>
   </header>
@@ -276,9 +280,10 @@
             <p class="text-lg text-slate-700 mb-6">
               Book a free 15-minute call — no sales pitch, just real talk about your business needs.
             </p>
-            <a href="https://calendly.com/zeroflowtech/15min" target="_blank"
+            <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+              target="_blank"
               class="inline-flex items-center gap-3 bg-blue-700 text-white px-8 py-4 rounded-xl font-bold hover:bg-blue-800 premium-button w-full justify-center">
-              Book Free Call Now <i class="fa-solid fa-arrow-right"></i>
+              Connect Now <i class="fa-solid fa-arrow-right"></i>
             </a>
           </div>
         </div>
@@ -297,10 +302,12 @@
         <div class="swiper-wrapper">
           <!-- Testimonial 1 -->
           <div class="swiper-slide px-4">
-            <div class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
+            <div
+              class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
               <div class="flex justify-center mb-6">
                 <div class="w-20 h-20 rounded-full overflow-hidden border-4 border-blue-100 shadow-md">
-                  <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop" alt="Rahul Jain" class="w-full h-full object-cover" />
+                  <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop"
+                    alt="Rahul Jain" class="w-full h-full object-cover" />
                 </div>
               </div>
               <div class="flex justify-center mb-5">
@@ -311,19 +318,22 @@
                 <i class="fa-solid fa-star text-yellow-400 text-2xl"></i>
               </div>
               <p class="italic text-slate-700 text-lg lg:text-xl leading-relaxed mb-8">
-                “They turned 10+ hours of daily chaos into complete automation. Bookings, leads, alerts — everything just works now. Best decision we made.”
+                “They turned 10+ hours of daily chaos into complete automation. Bookings, leads, alerts — everything
+                just works now. Best decision we made.”
               </p>
               <p class="font-bold text-2xl gradient-text">Rahul Jain</p>
-              <p class="text-slate-600 mt-1">Travel Agency Owner, Bhopal</p>
+              <p class="text-slate-600 mt-1">Travel Agency Owner</p>
             </div>
           </div>
 
           <!-- Testimonial 2 -->
           <div class="swiper-slide px-4">
-            <div class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
+            <div
+              class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
               <div class="flex justify-center mb-6">
                 <div class="w-20 h-20 rounded-full overflow-hidden border-4 border-blue-100 shadow-md">
-                  <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=200&h=200&fit=crop" alt="Priya Sharma" class="w-full h-full object-cover" />
+                  <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=200&h=200&fit=crop"
+                    alt="Priya Sharma" class="w-full h-full object-cover" />
                 </div>
               </div>
               <div class="flex justify-center mb-5">
@@ -334,7 +344,8 @@
                 <i class="fa-solid fa-star text-yellow-400 text-2xl"></i>
               </div>
               <p class="italic text-slate-700 text-lg lg:text-xl leading-relaxed mb-8">
-                “Their free audit showed us exactly where we were losing money. Honest, fast, and actually care about making your business better.”
+                “Their free audit showed us exactly where we were losing money. Honest, fast, and actually care about
+                making your business better.”
               </p>
               <p class="font-bold text-2xl gradient-text">Priya Sharma</p>
               <p class="text-slate-600 mt-1">Business Owner, Indore</p>
@@ -343,10 +354,12 @@
 
           <!-- Testimonial 3 -->
           <div class="swiper-slide px-4">
-            <div class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
+            <div
+              class="quote-bubble bg-white p-8 lg:p-10 rounded-3xl shadow-premium border border-slate-100 text-center relative">
               <div class="flex justify-center mb-6">
                 <div class="w-20 h-20 rounded-full overflow-hidden border-4 border-blue-100 shadow-md">
-                  <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=200&h=200&fit=crop" alt="Amit Patel" class="w-full h-full object-cover" />
+                  <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=200&h=200&fit=crop"
+                    alt="Amit Patel" class="w-full h-full object-cover" />
                 </div>
               </div>
               <div class="flex justify-center mb-5">
@@ -357,7 +370,8 @@
                 <i class="fa-solid fa-star text-yellow-400 text-2xl"></i>
               </div>
               <p class="italic text-slate-700 text-lg lg:text-xl leading-relaxed mb-8">
-                “Custom CRM cut our admin time by over 20 hours a week. Clear process, no surprises, always available when we need them.”
+                “Custom CRM cut our admin time by over 20 hours a week. Clear process, no surprises, always available
+                when we need them.”
               </p>
               <p class="font-bold text-2xl gradient-text">Amit Patel</p>
               <p class="text-slate-600 mt-1">Logistics Business, Ahmedabad</p>
@@ -380,10 +394,8 @@
         One short call can change how your business runs — let's find out if we're the right fit for you.
       </p>
       <div class="flex flex-col sm:flex-row justify-center gap-6">
-        <a href="https://calendly.com/zeroflowtech/15min" target="_blank" class="inline-flex items-center justify-center gap-3 bg-white text-blue-700 px-10 py-6 rounded-2xl font-bold text-xl hover:bg-gray-100 premium-button shadow-2xl">
-          Book Free 15-min Call <i class="fa-solid fa-calendar-days ml-2"></i>
-        </a>
-        <a href="mailto:zeroflowtech@gmail.com?subject=Quick%20Business%20Chat" class="inline-flex items-center justify-center gap-3 border-2 border-white text-white px-10 py-6 rounded-2xl font-bold text-xl hover:bg-white hover:text-blue-700 transition">
+        <a href="mailto:zeroflowtech@gmail.com?subject=Quick%20Business%20Chat"
+          class="inline-flex items-center justify-center gap-3 border-2 border-white text-white px-10 py-6 rounded-2xl font-bold text-xl hover:bg-white hover:text-blue-700 transition">
           Just Send a Quick Email
         </a>
       </div>
@@ -399,7 +411,7 @@
           <span class="text-2xl font-bold gradient-text">ZeroFlowTech</span>
         </div>
         <div class="flex flex-col sm:flex-row gap-6">
-          <a href="index.html#contact" class="hover:text-white">Contact</a>
+          <a href="contact.html" class="hover:text-white">Contact</a>
           <a href="faq.html" class="hover:text-white">FAQ</a>
           <a href="mailto:zeroflowtech@gmail.com" class="hover:text-white">zeroflowtech@gmail.com</a>
         </div>
