--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="ZeroFlowTech – Custom CRM, dynamic websites, business automation & workflows in Bhopal. Free audits, fast delivery." />
+    content="ZeroFlowTech – Custom CRM, dynamic websites, business automation & Free audits, fast delivery." />
   <title>ZeroFlowTech | Custom Websites, CRM & Automation Solutions</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -165,43 +165,41 @@
   <header class="sticky top-0 z-50 bg-white/95 backdrop-blur-md border-b">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16 sm:h-20">
-        <a href="/" class="flex items-center gap-3">
+        <a href="index.html" class="flex items-center gap-3">
           <img src="./assets/logos/logo.png" alt="ZeroFlowTech" class="w-10 h-10 sm:w-12 sm:h-12" />
           <span class="font-bold text-xl sm:text-2xl gradient-text">ZeroFlowTech</span>
         </a>
         <div class="hidden md:flex items-center gap-10">
           <nav class="flex gap-8 font-medium">
             <a href="services.html" class="hover:text-blue-700">Services</a>
-            <a href="#projects" class="hover:text-blue-700">Projects</a>
-            <a href="#onboarding" class="hover:text-blue-700">Onboarding</a>
-            <a href="case-studies.html" class="text-blue-700 font-semibold">Case Studies</a>
-            <a href="#testimonials" class="hover:text-blue-700">Testimonials</a>
-            <a href="about.html" class="text-blue-700 font-semibold">About</a>
+            <a href="case-studies.html" class="hover:text-blue-700">Case Studies</a>
+            <a href="about.html" class="hover:text-blue-700">About</a>
             <a href="contact.html" class="hover:text-blue-700">Contact</a>
+            <a href="faq.html" class="hover:text-blue-700">FAQ</a>
           </nav>
-          <a href="https://calendly.com/zeroflowtech/15min"
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank"
             class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
-            Book Free Call
+            Query ?
           </a>
         </div>
         <div class="md:hidden flex items-center gap-3">
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Book Call</a>
-          <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i></button>
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Query ?</a>
+          <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i>
+          </button>
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white border-t py-6 px-6 space-y-5 font-medium">
         <a href="services.html" class="block hover:text-blue-700">Services</a>
-        <a href="#projects" class="block hover:text-blue-700">Projects</a>
-        <a href="#onboarding" class="block hover:text-blue-700">Onboarding</a>
         <a href="case-studies.html" class="block hover:text-blue-700">Case Studies</a>
-        <a href="#testimonials" class="block hover:text-blue-700">Testimonials</a>
         <a href="about.html" class="block hover:text-blue-700">About</a>
-        <a href="contact.html" class="block hover:text-blue-700">Contact</a>
+        <a href="faq.html" class="block hover:text-blue-700">Faq</a>
       </div>
     </div>
   </header>
 
-  <!-- Hero (unchanged) -->
+  <!-- Hero -->
   <section class="gradient-hero pt-16 pb-24 sm:pb-32 relative overflow-hidden section-fade">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -217,9 +215,10 @@
             From static sites to fully automated CRMs & workflows — we build tools that save time and generate revenue.
           </p>
           <div class="mt-10 flex flex-col sm:flex-row gap-4">
-            <a href="https://calendly.com/zeroflowtech/15min"
-              class="bg-blue-700 text-white px-8 py-5 rounded-xl font-bold hover:bg-blue-800 premium-button flex items-center justify-center gap-2">
-              Free 15-min Consult <i class="fa-solid fa-arrow-right"></i>
+            <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+              target="_blank"
+              class="bg-blue-700 text-white px-8 py-5 rounded-xl font-semibold hover:bg-blue-700 premium-button flex items-center justify-center gap-2">
+              Get Consult
             </a>
             <a href="mailto:zeroflowtech@gmail.com?subject=Free Audit"
               class="border-2 border-blue-700 text-blue-700 px-8 py-5 rounded-xl font-bold hover:bg-blue-700 hover:text-white transition flex items-center justify-center gap-2">
@@ -240,7 +239,7 @@
   <section id="services" class="py-20 bg-slate-50 section-fade">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center mb-16">
-        <h2 class="text-4xl sm:text-5xl font-bold mb-4">Our Core Services</h2>
+        <h2 class="text-4xl sm:text-5xl font-bold mb-4">Our Services</h2>
         <p class="text-xl text-slate-600">Tailored solutions to automate, optimize and scale your business.</p>
       </div>
       <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -439,7 +438,7 @@
               </div>
               <p class="italic text-slate-700 mb-6">"Completely transformed our travel operations – bookings & leads now
                 automated 24/7. Best decision!"</p>
-              <p class="font-bold">Rahul Jain – Travel Agency Owner, Bhopal</p>
+              <p class="font-bold">Rahul Jain – Travel Agency Owner</p>
             </div>
           </div>
           <div class="swiper-slide">
@@ -530,7 +529,7 @@
       <div class="grid md:grid-cols-3 gap-8 lg:gap-12">
         <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200 shadow-premium hover:shadow-xl transition-all">
           <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-6 mx-auto">
-            <i class="fa-solid fa-rocket-launch text-3xl text-blue-600"></i>
+            <i class="fa-solid fa-rocket text-3xl text-blue-600"></i>
           </div>
           <h3 class="text-xl font-bold mb-4 text-center gradient-text">Clear & Simple Process</h3>
           <p class="text-slate-700 text-center">
@@ -575,10 +574,7 @@
       <h2 class="text-4xl sm:text-5xl font-bold mb-8">Ready to Automate Your Growth?</h2>
       <p class="text-xl sm:text-2xl mb-6">Free consult, audit or advice — no pressure.</p>
       <p class="text-lg mb-10">We provide dedicated support even after launch — you're never alone.</p>
-      <a href="https://calendly.com/zeroflowtech/15min" target="_blank"
-        class="bg-white text-blue-700 px-10 py-6 rounded-xl font-bold text-xl hover:bg-gray-100 premium-button inline-flex items-center gap-3">
-        Book 15-min Call <i class="fa-solid fa-arrow-right"></i>
-      </a>
+
       <p class="mt-8">Or email <a href="mailto:zeroflowtech@gmail.com"
           class="underline hover:text-white">zeroflowtech@gmail.com</a></p>
     </div>
@@ -650,10 +646,6 @@
       </p>
 
       <div class="flex flex-col sm:flex-row justify-center gap-6 flex-wrap">
-        <a href="https://calendly.com/zeroflowtech/15min"
-          class="inline-flex items-center justify-center gap-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white px-10 py-6 rounded-2xl font-bold text-xl hover:from-blue-700 hover:to-blue-800 premium-button shadow-2xl min-w-[280px]">
-          Book Free 15-min Strategy Call <i class="fa-solid fa-arrow-right"></i>
-        </a>
         <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
           target="_blank"
           class="inline-flex items-center justify-center gap-3 bg-green-600 text-white px-10 py-6 rounded-2xl font-bold text-xl hover:bg-green-700 shadow-2xl min-w-[280px]">
@@ -688,7 +680,7 @@
         </h3>
 
         <p class="text-lg sm:text-xl text-slate-700 leading-relaxed mb-10">
-          We don’t sell tools — we sell **freedom** and **growth**.
+          We don’t sell tools — we sell <b>freedom</b> and <b>growth</b>.
         </p>
 
         <!-- Animated Benefit List -->
