--- a/faq.html
+++ b/faq.html
@@ -60,26 +60,28 @@
         <div class="hidden md:flex items-center gap-10">
           <nav class="flex gap-8 font-medium">
             <a href="index.html" class="hover:text-blue-700">Home</a>
-            <a href="index.html#services" class="hover:text-blue-700">Services</a>
-            <a href="index.html#projects" class="hover:text-blue-700">Projects</a>
+            <a href="services.html" class="hover:text-blue-700">Services</a>
             <a href="case-studies.html" class="hover:text-blue-700">Case Studies</a>
             <a href="about.html" class="hover:text-blue-700">About</a>
             <a href="contact.html" class="hover:text-blue-700">Contact</a>
             <a href="faq.html" class="text-blue-700 font-semibold">FAQ</a>
           </nav>
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
-            Book Free Call
+        <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
           </a>
         </div>
         <div class="md:hidden flex items-center gap-3">
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Book Call</a>
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
+          </a>
           <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i></button>
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white border-t py-6 px-6 space-y-5 font-medium">
         <a href="index.html" class="block hover:text-blue-700">Home</a>
-        <a href="index.html#services" class="block hover:text-blue-700">Services</a>
-        <a href="index.html#projects" class="block hover:text-blue-700">Projects</a>
+        <a href="services.html" class="block hover:text-blue-700">Services</a>
         <a href="case-studies.html" class="block hover:text-blue-700">Case Studies</a>
         <a href="about.html" class="block hover:text-blue-700">About</a>
         <a href="contact.html" class="block hover:text-blue-700">Contact</a>
@@ -241,7 +243,7 @@
           <span class="text-2xl font-bold gradient-text">ZeroFlowTech</span>
         </div>
         <div class="flex flex-col sm:flex-row gap-6">
-          <a href="index.html#contact" class="hover:text-white">Contact</a>
+          <a href="contact.html" class="hover:text-white">Contact</a>
           <a href="faq.html" class="hover:text-white">FAQ</a>
           <a href="mailto:zeroflowtech@gmail.com" class="hover:text-white">zeroflowtech@gmail.com</a>
         </div>
