--- a/services.html
+++ b/services.html
@@ -70,27 +70,31 @@
           <nav class="flex gap-8 font-medium">
             <a href="index.html" class="hover:text-blue-700">Home</a>
             <a href="services.html" class="text-blue-700 font-semibold">Services</a>
-            <a href="index.html#projects" class="hover:text-blue-700">Projects</a>
             <a href="case-studies.html" class="hover:text-blue-700">Case Studies</a>
             <a href="about.html" class="hover:text-blue-700">About</a>
             <a href="contact.html" class="hover:text-blue-700">Contact</a>
+            <a href="faq.html" class="hover:text-blue-700">FAQ</a>
           </nav>
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
-            Book Free Call
+          <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
           </a>
         </div>
         <div class="md:hidden flex items-center gap-3">
-          <a href="https://calendly.com/zeroflowtech/15min" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-semibold">Book Call</a>
+         <a href="https://wa.me/6268497800?text=Hi%20ZeroFlowTech%2C%20I%20want%20to%20talk%20about%20automating%20my%20business"
+            target="_blank" class="bg-blue-700 text-white px-6 py-3 rounded-xl font-semibold hover:bg-blue-800 premium-button">
+            Query ?
+          </a>
           <button id="menu-btn" class="text-2xl"><i class="fa-solid fa-bars"></i></button>
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white border-t py-6 px-6 space-y-5 font-medium">
         <a href="index.html" class="block hover:text-blue-700">Home</a>
         <a href="services.html" class="block text-blue-700 font-semibold">Services</a>
-        <a href="index.html#projects" class="block hover:text-blue-700">Projects</a>
         <a href="case-studies.html" class="block hover:text-blue-700">Case Studies</a>
         <a href="about.html" class="block hover:text-blue-700">About</a>
         <a href="contact.html" class="block hover:text-blue-700">Contact</a>
+        <a href="faq.html" class="block hover:text-blue-700">FAQ</a>
       </div>
     </div>
   </header>
@@ -128,7 +132,7 @@
 
           <div class="swiper-slide">
             <div class="bg-white rounded-3xl shadow-premium overflow-hidden">
-              <img src="https://images.unsplash.com/photo-1560518883-2e5c3868c2a0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Real Estate" class="w-full h-64 object-cover">
+              <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Real Estate" class="w-full h-64 object-cover">
               <div class="p-6 text-center">
                 <h3 class="text-2xl font-bold gradient-text mb-2">Real Estate</h3>
                 <p class="text-slate-600">Property dashboards, lead tracking, client portals</p>
@@ -191,7 +195,7 @@
           <div class="swiper-slide">
             <div class="bg-white p-8 rounded-3xl shadow-premium text-center">
               <i class="fa-solid fa-database text-6xl text-purple-600 mb-6 animate-pulse"></i>
-              <h3 class="text-2xl font-bold mb-3 gradient-text">Node.js / PHP / MongoDB / SQL</h3>
+              <h3 class="text-2xl font-bold mb-3 gradient-text">Node.js / MongoDB / SQL</h3>
               <p class="text-slate-600">Powerful, scalable backends — secure & fast data handling</p>
             </div>
           </div>
